offgridplanner/static/css/main.css
/* ... */
.components h1 {
    text-align: center;
}

.components h2 {
    padding-top: 3rem;
    padding-left: 1rem;
}

.components__description {
    max-width: 60rem;
}

.components__description li {
    padding-left: 1rem;
}

.components .component {
    padding-bottom: 2rem;
}

.components .component__title {
    padding: 1rem;
}

.components nav.navbar {
    position: relative;
}

.footer {
    background-color: #F4F7F9;
    height: 4.5rem;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-negative: 0;
    flex-shrink: 0;
}

.footer > div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    width: 100%;
    max-width: 82rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.footer__logo img {
    height: 2rem;
}

.footer__links {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.footer__links ul {
    list-style: none;
    margin-bottom: 0;
    padding-left: 0;
}

.footer__links li {
    display: inline-block;
    padding-left: 1rem;
}

.step-footer {
    background-color: var(--bcc);
    height: 4rem;
    bottom: 0;
    width: 100%;
    border-top: 2px solid #F4F7F9;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-negative: 0;
    flex-shrink: 0;
}

.step-footer > div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    width: 100%;
}

.step-footer__left,
.step-footer__right {
    -webkit-box-flex: 1;
    -ms-flex: 1;
    flex: 1;
}

.step-footer .btn--previous {
    border: none;
    color: #fff;
    background-color: var(--cdg);
}

.step-footer__right a {
    float: right;

    padding: 10px;
}

.step-footer__left a {
    padding: 10px;
    display: flex;
    align-items: center;
}

.form-control:disabled,
.form-control:disabled::file-selector-button {
    color: #ccc;
}

.form-control:valid {
    background-color: var(--bcc) !important;
}

form .form-control:focus {
    border-color: #1F567D;
    -webkit-box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
    box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
}

.form-check-input {
    margin-right: .5em;
}

form .form-check-input:focus {
    -webkit-box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
    box-shadow: 0 0 0 0.25rem rgba(31, 86, 125, 0.1);
}

form .form-check-input:checked {
    background-color: #1F567D;
}

.row .form-control {
    line-height: 1;
}


form .form-control.input-updated:focus {
    -webkit-box-shadow: 0 0 0.5rem rgba(253, 197, 52, 0.8);
    box-shadow: 0 0 0.5rem rgba(253, 197, 52, 0.8);
}

form .form-control::-webkit-input-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control:-ms-input-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control::-ms-input-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control::placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control::-webkit-input-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control::-moz-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control:-ms-input-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .form-control:-moz-placeholder {
    color: #D6D6D6;
    font-size: 1rem;
}

form .input-item,
form .text-item {
    position: relative;
    padding-bottom: 1rem;
}

form .input-item.optional label.form-label::after,
form .text-item.optional label.form-label::after {
    content: '- optional';
    font-weight: 300;
    font-style: italic;
    padding-left: .5rem;
}

form .input-item .icon-question,
form .text-item .icon-question {
    padding-left: 0.35rem;
    cursor: pointer;
    vertical-align: middle;
}

form .input-item .form-text.to-right,
form .text-item .form-text.to-right {
    position: absolute;
    right: 0;
}

form .input-item textarea,
form .text-item textarea {
    /* height: 7.75rem; */
    max-height: 10rem;
}

form .input-item .input-group-text,
form .text-item .input-group-text {
    color: #343434;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.input-item .input-group .disabled,
.box .input-group .disabled {
    color: #ccc;
}

.input-group-text {
    /* height: 1.5rem; */
    padding-top: 1px;
    padding-bottom: 1px;
}

form .btn {
    /* margin-top: 1rem; */
    margin-top: 0rem;
}

label.form-label.disabled,
div.disabled {
    color: #ccc;
    pointer-events: none;
}

.header {
    background-color: #fff;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding-bottom: 2rem;
}
/* ... */

